Updated notbook file.

--- a/Automobile_ML_Combined_Project.ipynb
+++ b/Automobile_ML_Combined_Project.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part - A"
+    "### Part A: K-Means Clustering (Unsupervised Learning)"
    ]
   },
   {
@@ -1784,7 +1784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part B"
+    "### Part B: PCA + SVM Classification (Supervised Learning)"
    ]
   },
   {
